[tool.poetry]
name = "rest-memory-testing"
version = "0.1.0"
description = ""
authors = ["halone <haloneprog@gmail.com>"]
readme = "README.md"
packages = [{include = "rest_memory_testing"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
falcon = "^3.1.3"
quart = "^0.19.5"
docker = "^7.0.0"
loguru = "^0.7.2"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "main:start"